<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context="com.rizz.pdf.pdfsensing.IntroActivity">

    <Button
        android:id="@+id/startButton"
        android:layout_width="299dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:onClick="startButtonAction"
        android:text="READY"
        android:textColor="@color/background_text"
        android:textSize="80dp" />

    <LinearLayout
        android:id="@+id/checkBoxLayout"
        android:layout_width="match_parent"
        android:layout_height="406dp"
        android:layout_gravity="center_horizontal|top"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/question1"
            android:textSize="@dimen/question_text_size" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/question2"
            android:textSize="@dimen/question_text_size" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/question3"
            android:textSize="@dimen/question_text_size" />

        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/question4"
            android:textSize="@dimen/question_text_size" />

        <CheckBox
            android:id="@+id/checkBox5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/question5"
            android:textSize="@dimen/question_text_size" />
    </LinearLayout>
</FrameLayout>
